# icu4c-playground

./: CMakeLists.txt  README.md  local-build.cmd  local-build.sh
src/: main.cpp
